[SPC-landing] fix info text spacing

--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -23,10 +23,15 @@
 
         .info-heading {
             font-size: 2em;
+
+            .fa {
+                padding-right: 0.3em;
+            }
         }
 
         .info-text {
             margin-bottom: 2em;
+            line-height: 2em;
         }
     }
 
